Ingress_Context_Path_Routing/WepApp2-Deployment-and-NodePortService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: awanmbandi/app2:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-nodeport-service
  labels:
    app: app2
  annotations:
spec:
  type: NodePort
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
