Ingress_Context_Path_Routing/WepApp3-Deployment-and-NodePortService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: app3 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: awanmbandi/default-app:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-nodeport-service
  labels:
    app: app3
  annotations:
spec:
  type: NodePort
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
